tests/ivg/invalid/gradient_stop_position.ivg
format IVG-3
// gradient stop position out of range
fill gradient:[linear 0,0 1,0 stops:[0,#000,2,#fff]]
